# lore_rendering

./: LICENSE.md  README.md  __init__.py  item_gen.py  pyproject.toml  requirements.txt
lore/: item_gen.py
